# clicker-game

./: hamster.py  pyproject.toml
hamster/: __init__.py
tests/: test_hamster.py
time_plugin/: __init__.py
time_plugin/assets/: time.js
